--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Expires" content="0" />
     <meta name="format-detection" content="telephone=no">
 
-    <title>Levin, Owen  (547896) - Student Profile - Fresno Unified School District</title>
+    <title>Lopez-Mejia, Amadalhy N (548635) - Student Profile - Fresno Unified School District</title>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="design4.css" rel="stylesheet"/>
 
